Adapted for ansible

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ target
 logs
 .DS_Store
 .history
-logs
 */build
 */conf/prodExt.conf
 */conf/testExt.conf
@@ -22,3 +21,5 @@ kubernetes/output.yml
 kubernetes/secrets-test.yml
 kubernetes/secrets-prod.yml
 project/project
+/project/Environment.scala
+/kubernetes/daf-storage-manager.yml
