Added query sql
Added dhall template

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ kubernetes/secrets-prod.yml
 project/project
 /project/Environment.scala
 /kubernetes/daf-storage-manager.yml
+/.bloop/
+/.metals/
+/project/.bloop/daf-srv-storage-build.json
